--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "firebase": "^11.10.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.15.32",
     "@vitejs/plugin-vue": "^6.0.0",
@@ -27,13 +30,19 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.1",
     "@vue/tsconfig": "^0.7.0",
+    "@vueuse/motion": "^3.0.3",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-plugin-oxlint": "~1.1.0",
     "eslint-plugin-vue": "~10.2.0",
+    "framer-motion": "^12.23.6",
     "jiti": "^2.4.2",
+    "lucide-vue-next": "^0.525.0",
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.1.0",
+    "postcss": "^8.5.6",
     "prettier": "3.5.3",
+    "tailwindcss": "^3.4.0",
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7",
