--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ VITE_FIREBASE_STORAGE_BUCKET=fynditmarket.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=266442629786
 VITE_FIREBASE_APP_ID=1:266442629786:web:8c97c7bd4c21b28fb2b523
 VITE_FIREBASE_MEASUREMENT_ID=G-3ZFQ8QJ37R
+# Cloudinary Configuration
+VITE_CLOUDINARY_CLOUD_NAME=dvxe3ihxa
+VITE_CLOUDINARY_UPLOAD_PRESET=fyndit_unsigned
