--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.21.0",
+    "@cloudinary/vue": "^1.13.3",
     "firebase": "^11.10.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
